Basic members functions added

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 		
 	</head>
 	<body>
-		<div class="container">
+		<div class="container well">
 			<div class="navbar-wrapper">
 				<div class="container">
-					<div class="navbar navbar-valentine">
+					<div class="navbar navbar-inverse">
 						<div class="navbar-inner">
 							<a class="brand we">artists don't need descriptions</a>
 						</div>
@@ -41,9 +41,28 @@
 				</div>
 			</div>
 			<div class="jumbotron well">
-				<a class="we">we</a> don't. do <a class="you">YOU</a>?
+				<p><a class="we">we</a> don't. do <a class="you">YOU</a>?</p>
+				<p><a class="btn" href="https://github.com/adnd/adnd.github.com/issues/new">Create a join application issue.</a></p>
 			</div>
-			<div class="footer">
+			<div class="container-fluid">
+				<div class="row-fluid">
+					<div class="span4 well">
+						<h2>MPRZ</h2>
+						<p>actual leader of the project</p>
+						<p>tries to create beautiful simplicity</p>
+						<p>
+							<a class="btn" href="http://michcioperz.trovebox.com/photos/album-b/list">this is art. project</a>
+						</p>
+					</div>
+					<div class="span4 well">
+						not anyone yet.
+					</div>
+					<div class="span4 well">
+						someday you might join.
+					</div>
+				</div>
+			</div>
+			<div class="footer well">
 			<p>All rights reshaved. This Art is copyrighted under the terms of the Temporary Art License (r1), available at <a href="http://github.com/adnd/temporary-art-license">http://github.com/adnd/temporary-art-license</a></p>
 			<p class="artists">2013 artists don't need descriptions team</p>
 		</div>
