Adding tooltip to the join button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</div>
 			<div class="jumbotron well">
 				<p><a class="we">we</a> don't. do <a class="you">YOU</a>?</p>
-				<p><a class="btn" href="https://github.com/adnd/adnd.github.com/issues/new">Create a join application issue.</a></p>
+				<p><a class="btn tip-needed" data-original-title="Remember to choose join-application as issue's label!!!" href="https://github.com/adnd/adnd.github.com/issues/new">Create a join application issue.</a></p>
 			</div>
 			<div class="container-fluid">
 				<div class="row-fluid">
@@ -63,9 +63,12 @@
 				</div>
 			</div>
 			<div class="footer well">
-			<p>All rights reshaved. This Art is copyrighted under the terms of the Temporary Art License (r1), available at <a href="http://github.com/adnd/temporary-art-license">http://github.com/adnd/temporary-art-license</a></p>
-			<p class="artists">2013 artists don't need descriptions team</p>
+				<p>All rights reshaved. This Art is copyrighted under the terms of the Temporary Art License (r1), available at <a href="http://github.com/adnd/temporary-art-license">http://github.com/adnd/temporary-art-license</a></p>
+				<p class="artists">2013 artists don't need descriptions team</p>
+			</div>
 		</div>
-		</div>
+		<script type="text/javascript">
+			$(".tip-needed").tooltip();
+		</script>
 	</body>
 </html>
