Adding gravatars, also little changes

--- a/index.html
+++ b/index.html
@@ -47,18 +47,21 @@
 			<div class="container-fluid">
 				<div class="row-fluid">
 					<div class="span4 well">
+						<img src="http://www.gravatar.com/avatar/130ecf6c1033440659e1e6a25baec56d?s=200&d=retro&r=pg" />
 						<h2>MPRZ</h2>
-						<p>actual leader of the project</p>
+						<p>actual leader of the team</p>
 						<p>tries to create beautiful simplicity</p>
 						<p>
 							<a class="btn" href="http://michcioperz.trovebox.com/photos/album-b/list">this is art. project</a>
 						</p>
 					</div>
 					<div class="span4 well">
+						<img src="http://www.gravatar.com/avatar/00000000000000000000000000000000?s=200&d=retro&r=pg" />
 						not anyone yet.
 					</div>
 					<div class="span4 well">
-						someday you might join.
+						<img src="http://www.gravatar.com/avatar/00000000000000000000000000000000?s=200&d=retro&r=pg" />
+						why don't <a class="you">YOU</a> join?
 					</div>
 				</div>
 			</div>
