H1ing empty divs

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 					</div>
 					<div class="span4 well">
 						<img src="http://www.gravatar.com/avatar/00000000000000000000000000000000?s=200&d=retro&r=pg" />
-						not anyone yet.
+						<h2>not anyone yet.</h2>
 					</div>
 					<div class="span4 well">
 						<img src="http://www.gravatar.com/avatar/00000000000000000000000000000000?s=200&d=retro&r=pg" />
-						why don't <a class="you">YOU</a> join?
+						<h2>why don't <a class="you">YOU</a> join?</h2>
 					</div>
 				</div>
 			</div>
