--- a/index.html
+++ b/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>artists don't need desctiptions</title>
+		<title>artists don't need descriptions</title>
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.0/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.0/css/bootstrap-responsive.min.css" />
-		<link href='http://fonts.googleapis.com/css?family=Mr+Dafoe|Dr+Sugiyama|Ubuntu' rel='stylesheet' type='text/css'>
+		<link href="https://github.com/adnd/adnd.github.com/raw/master/global-common.css" rel='stylesheet' type='text/css'>
 		<style>
 			body {
-				font-family: 'Ubuntu', sans-serif;
 				padding-top: 20px;
 				padding-bottom: 40px;
-			}
-			.you {
-				font-family: 'Dr Sugiyama', 'Ubuntu', serif;
-			}
-			.we {
-				font-family: 'Mr Dafoe', 'Ubuntu', serif;
 			}
 			.jumbotron {
 				font-size: 75px;
