--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>artists don't need descriptions</title>
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.0/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.0/css/bootstrap-responsive.min.css" />
-		<link href="https://github.com/adnd/adnd.github.com/raw/master/global-common.css" rel='stylesheet' type='text/css'>
+		<link href="http://adnd.github.com/global-common.css" rel='stylesheet' type='text/css'>
 		<style>
 			body {
 				padding-top: 20px;
