--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="footer well">
+			<div class="footer well we">
 				<p>All rights reshaved. This Art is copyrighted under the terms of the Temporary Art License (r1), available at <a href="http://github.com/adnd/temporary-art-license">http://github.com/adnd/temporary-art-license</a></p>
 				<p class="artists">2013 artists don't need descriptions team</p>
 			</div>
